# open-care

./: .env.example  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  DEVELOPMENT.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  deploy-prod.yml  deploy.yml  nightly.yml
apps/anchor-cron/: AGENTS.md  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
apps/api-read/: AGENTS.md  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
apps/api-write/: AGENTS.md  package.json  wrangler.jsonc
apps/ingest/: AGENTS.md  package.json  wrangler.jsonc
apps/operator/: AGENTS.md  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
apps/tg-bot/: AGENTS.md  package.json  tsconfig.json  wrangler.jsonc
apps/web/: AGENTS.md  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
docs/: implementation-plan.md  review-2026-06-18-summary.md  review-2026-06-23-hardening-audit.md  ui-feature-map.md
docs/backlog/: post-review-hardening.md
docs/concepts/: 2026-06-14-crypto-charity-vault.md
docs/implementation-plans/: 2026-06-17-epic2-ingest.md  2026-06-18-epic-7-frontend-testing-hardening.md
docs/ops/: rollback.md  secrets-inventory.md
docs/review/: 2026-06-16-comprehensive-review.md  2026-06-16-implementer-skeptic.md
docs/specs/: 00-overview.md  01-architecture.md  02-invariants.md  03-data-model.md  04-api.md  05-hosting-and-deploy.md  06-security-model.md  07-observability-and-ops.md  08-testing-strategy.md  09-decisions.md  10-frontend-architecture.md  11-public-frontend-ux.md  12-operator-frontend-ux.md  13-post-review-hardening.md  README.md
docs/ui/: ui-feature-map.md
docs/ui-prototypes/: landing.html  landing.md
test/: secret-scan.test.mjs  vitest.config.ts  wrangler-allowlist.test.ts
test/e2e-tg/: AGENTS.md  get_session_string_draft.py  pyproject.toml
tools/e2e-tg/: AGENTS.md  get_session_string_draft.py  pyproject.toml
tools/e2e-tg/tests/: conftest.py  test_staging_bot.py
(+208 files in other folders)
