[project]
name = "open-care-tg-e2e"
version = "0.0.0"
description = "Manual/nightly Telegram E2E tests for the Open Care staging bot"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "telethon>=1.36.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "tg_e2e: manual/nightly live Telegram staging E2E tests",
]
